--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ color: white;
   position: relative;
   width: 100%;
   height: 150px;
+  margin-bottom: 30px;
 
 
 
@@ -718,4 +719,24 @@ margin-left: 10px;
 .Add{
   width: 24px;
 height: 24px;
+}
+
+.footer p{
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;  
+  color: #FFFFFF;
+
+  
+}
+
+.footer h6{
+  font-family: 'Montserrat';
+font-style: italic;
+font-weight: 600;
+font-size: 21.5014px;
+line-height: 26px;
+color: white;
 }
