--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,9 @@
 
 .navbar {
   background-color: #0A183A;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -39,12 +42,19 @@
 .bt1 {
   margin-left: 15%;
 }
+
+
+
+.navLink{
+  margin-right: 10px;
+}
+
 .signup{
   display: flex;
   justify-content: center;
   align-items: center;
   width: 116px;
-height: 44px;
+height: 40px;
 background: #0085FF;
 border-radius: 12px;
 font-family: 'Poppins';
@@ -54,10 +64,7 @@ font-size: 16px;
 line-height: 24px;
 color: #FFFFFF;
 
-margin: 0 5px 0 5px;
-}
-.navLink{
-  margin-right: 10px;
+margin-top: -5px;
 }
 
 
