--- a/src/Mycomponents/register.css
+++ b/src/Mycomponents/register.css
@@ -37,13 +37,13 @@ input{
     cursor: pointer;
 }
 
-img{
+/* img{
     position: relative;
     float: right;
     width: 100%;
     height: 100%;
     border-radius: 10px;
-}
+} */
 
 .main{
     display:flex;
@@ -55,6 +55,6 @@ img{
     gap: 10px;
 }
 
-span{
+/* span{
     color: red;
-}
+} */
